<resources>
    <string name="app_name">Global Resto Bar</string>
    <string name="ipaddress">IPAdress</string>
    <string name="validate_ip">Validate IP</string>
    <string name="validate_ip_to_continue">Validate IP to continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="waitername">Waiter Name</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_date">Login Date</string>
    <string name="take_order1">Save KOT</string>
    <string name="running_order">Running KOT</string>
    <string name="cancel_and_shift">Cancel And Shift</string>
    <string name="cancel_order1">Cancel KOT</string>
    <string name="shift_table1">Shift Table</string>
    <string name="billing">Billing</string>
    <string name="bill">Bill</string>
    <string name="bill_invoice">Bill Invoice</string>
    <string name="about_us_and_logout">About Us and Logout</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table_no">Table</string>
    <string name="menu">Item Name</string>
    <string name="quantity">Qty</string>
    <string name="rate">Rate</string>
    <string name="amount">Amount</string>
    <string name="special_request">Special Request</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="Reset">Reset</string>
    <string name="take_order">Save KOT</string>
    <string name="ex_127_0_0_1">Ex: 127.0.0.1</string>
    <string name="existing_orders">Existing KOT</string>
    <string name="search">Search Table</string>
    <string name="view">View</string>
    <string name="search_item">Search Item</string>
    <string name="cancel_kot">Cancel KOT</string>
    <string name="return_qty">Return Qty</string>
    <string name="reason">Reason</string>
    <string name="new_orders">New Kot</string>
</resources>