<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="@dimen/_30ssp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_in_to_continue"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/waitername"
            android:textColor="@color/black"
            android:layout_gravity="left"/>

        <AutoCompleteTextView
            android:id="@+id/act_waitername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="Ex: John Doe"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="*********"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_logindate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login_date"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>