<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activity.IPAddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_food_serving" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_25sdp"
            android:fontFamily="@font/sourcesanspro_regular"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate_ip_to_continue"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/sourcesanspro_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/_20sdp"
            android:maxLines="1"
            android:text="@string/ipaddress"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/sourcesanspro_regular"/>

        <EditText
            android:id="@+id/et_ipaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:digits="0123456789."
            android:hint="@string/ex_127_0_0_1"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="15"
            android:textStyle="bold"
            android:fontFamily="@font/sourcesanspro_regular"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_validateIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/black"
            android:text="@string/validate_ip"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:fontFamily="@font/sourcesanspro_regular"/>
    </LinearLayout>

</RelativeLayout>