<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.TakeOrderFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:background="@drawable/button_background"
        card_view:cardCornerRadius="@dimen/_5sdp"
        card_view:cardElevation="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/ll_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_tablenoinputlayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="0.20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_tableno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/table_no"
                        android:maxLines="1"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="0.60">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:ellipsize="end"
                        android:hint="@string/menu"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="0.20">

                    <EditText
                        android:id="@+id/et_qty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantity"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spin_ServesIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_weight="0.40"
                    android:editable="false"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="0.30">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/rate"
                        android:maxLines="1"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="0.30">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/amount"
                        android:maxLines="1"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_specialreqeust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_splrequest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/special_request"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--  <ViewAnimator
                  android:layout_width="match_parent"
                  android:layout_height="0.6dp"
                  android:background="@color/white" />
-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/tv_clear"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/grey300"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/black"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/grey300"
            android:text="@string/Reset"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_takeorder"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/take_order"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>