<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CancelOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/NoActionBarTheme"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@drawable/background">

            <!--app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_menu"-->

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Order Details"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:gravity="left"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:fontFamily="@font/sourcesanspro_regular" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/search_item"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/editext_background"
            android:drawableStart="@drawable/ic_baseline_youtube_searched_for_24"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="@string/search_item"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="20"
            android:paddingStart="@dimen/_18sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:textSize="@dimen/_11ssp" />

        <!-- TODO: Update blank fragment layout -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_running_order_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/grey300"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:fontFamily="@font/sourcesanspro_regular"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_order"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel_order1"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:fontFamily="@font/sourcesanspro_regular" />
    </LinearLayout>
</RelativeLayout>